Fixed some bugs

--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
 
     <section class="container">
 
-        <img src="img/image-equilibrium.jpg" alt="" id="img-front-cover">
+        <figure>
+
+            <img src="img/image-equilibrium.jpg" alt="" id="img-front-cover">
+
+            <figcaption>
+                <div id="preview-img"></div>
+            </figcaption>
+
+        </figure>
 
         <div id="info-card">
 
@@ -36,12 +44,11 @@
                     <span>3 days left</span>
                 </div>
 
-
             </div>
 
             <div id="info-dev">
                 <img src="img/image-avatar.png" alt="">
-                <p><span>Creation of</span> Jules Wyvern</p>
+                <p>Creation of <span> Jules Wyvern</span></p>
             </div>
         </div>
     </section>
